--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -70,93 +70,208 @@ a {
     font-size: 32px;font-size:2rem;
 }
 
+
+/* Nav Menu
+********************************/
+
+/* Nav */
+@media (min-width:980px) {
+    .nav-collapse {
+        float: right;
+    }
+}
+
+
+/* Nav BG */
 .navbar-inner {
     background-color: #375e86;
     background-image: none;
-}
+    border-color: #243140;
+    }
+    .navbar-fixed-top .navbar-inner, 
+    .navbar-static-top .navbar-inner {
+        border-width: 0;
+        box-shadow: none;
+        }
 
+    
+/* Nav Menu */
+.nav-collapse, 
+.nav-collapse.collapse {
+    margin: 0 -5px;
+    }
+
+    .nav-collapse ul.nav {
+        margin-right: 0;
+        }
+        .nav-collapse .nav > li > a, 
+        .nav-collapse .dropdown-menu a {
+            border-radius: 0 !important;
+            }
+        
+
+/* Nav Link style */
+.navbar .nav a { font-size:18px;font-size:1.13rem; }
 .navbar .nav > li > a {
-    color: #FFFFFF;
+    color: #ECF0F1;
     text-shadow: none;
     padding: 18px 15px;
-}
+    font-weight: bold;
+    }
 
-.navbar .nav a {
-    font-size:18px;font-size:1.13rem;    
-}
+    /* Nav Link hover */
+    .navbar .nav > li > a:focus, 
+    .navbar .nav > li > a:hover {
+        color: #CCCCCC;
+        }
+    
+    /* Nav Link active */
+    .navbar .nav > .active > a, 
+    .navbar .nav > .active > a:hover, 
+    .navbar .nav > .active > a:focus {
+        color: #FFFFFF;
+        background-color: #2C3E50;
+        box-shadow: none;
+        }
 
-.navbar-fixed-top .navbar-inner, .navbar-static-top .navbar-inner {
-    border-width: 0;
-}
 
-.navbar .nav > li > a:focus, .navbar .nav > li > a:hover {
-    color: #CCCCCC;
-}
 
-.navbar .nav > .active > a, .navbar .nav > .active > a:hover, .navbar .nav > .active > a:focus {
-    color: #FFFFFF;
-    background-color: #2C3E50;
-}
 
+/* Dropdown
+********************************/
+
+/* Dropdown top toggle caret*/
 .navbar .nav li.dropdown > .dropdown-toggle .caret {
     border-bottom-color: #FFFFFF;
     border-top-color: #FFFFFF;
 }
 
-.navbar .nav li.dropdown > a:hover .caret, .navbar .nav li.dropdown > a:focus .caret {
+/* Dropdown top toggle caret hover */
+.navbar .nav li.dropdown > a:hover .caret, 
+.navbar .nav li.dropdown > a:focus .caret {
     border-bottom-color: #CCCCCC;
     border-top-color: #CCCCCC;
 }
 
-
-/* Dropdown hover active */
-.navbar .nav li.dropdown.open > .dropdown-toggle, .navbar .nav li.dropdown.active > .dropdown-toggle, .navbar .nav li.dropdown.open.active > .dropdown-toggle {
-    background-color: #336699;
+/* Dropdown top toggle active */
+.navbar .nav li.dropdown.open > .dropdown-toggle, 
+.navbar .nav li.dropdown.active > .dropdown-toggle, 
+.navbar .nav li.dropdown.open.active > .dropdown-toggle {
+    background-color: #708396;
     color: #FFFFFF;
     }
-    .navbar .nav li.dropdown.open > .dropdown-toggle .caret, .navbar .nav li.dropdown.active > .dropdown-toggle .caret, .navbar .nav li.dropdown.open.active > .dropdown-toggle .caret {
+    /* Caret */
+    .navbar .nav li.dropdown.open > .dropdown-toggle .caret, 
+    .navbar .nav li.dropdown.active > .dropdown-toggle .caret, 
+    .navbar .nav li.dropdown.open.active > .dropdown-toggle .caret {
         border-bottom-color: #FFFFFF;
         border-top-color: #FFFFFF;
         }
+            
 
-/* Dropdown */
-.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus, .dropdown-submenu:hover > a, .dropdown-submenu:focus > a {
-    background-color: #336699;
+/* Dropdown BG */
+.dropdown-menu {
+    background: #708396;
+    padding: 0;
+    margin: 0;
+    border-radius: 0;  
+    border: 0;
+    box-shadow: none;
+    }
+    
+    /* Dropdown Arrow */
+    .navbar .nav > li > .dropdown-menu:before,
+    .navbar .nav > li > .dropdown-menu:after { 
+        display: none;
+        }
+
+    /* Dropdown subheading */        
+    .dropdown-menu .nav-header {
+        color: #abb4bd;
+        text-shadow:none;    
+        }
+        
+    /* Dropdown Divider */    
+    .dropdown-menu .divider {
+        background-color: #798999;
+        border-bottom: 1px solid #5c6c7d;
+        }    
+
+
+/* Dropdown link style */
+    .dropdown-menu > li > a {
+        color: #ECF0F1;
+        padding-top: 10px;
+        padding-bottom: 10px; 
+        font-weight: bold;   
+        }
+                          
+        /* Dropdown link hover */
+        .dropdown-menu > li > a:hover, 
+        .dropdown-menu > li > a:focus, 
+        .dropdown-submenu:hover > a, 
+        .dropdown-submenu:focus > a {
+            background-color: #536475;
+            background-image: none;
+            }
+
+
+
+
+/* Mobile menu
+********************************/
+
+/* Button */
+.navbar .btn-navbar {
+    background-color: #2C3E50;
     background-image: none;
-}
+        
+    -webkit-transform: translate3d(0, 0, 0); /* iOS boost & fix flicker */
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    }
+    .navbar .btn-navbar:hover, 
+    .navbar .btn-navbar:focus, 
+    .navbar .btn-navbar:active, 
+    .navbar .btn-navbar.active, 
+    .navbar .btn-navbar.disabled, 
+    .navbar .btn-navbar[disabled] {
+        background-color: #2C3E50;
+    }
+        
+    /* Icon */
+    .navbar .btn-navbar .icon-bar {
+        height: 4px;
+        margin: 4px 0;
+        width: 24px;
+        }
 
 
-/* Mobile menu */
-
-.navbar .btn-navbar .icon-bar {
-    height: 4px;
-    margin: 4px 0;
-    width: 24px;
-}
-
+/* Mobile menu inside */
 @media (max-width:979px) {
-    .navbar .btn-navbar {
-        background-color: #2C3E50;
-        background-image: none;
-    }
-    .navbar .btn-navbar:hover, .navbar .btn-navbar:focus, .navbar .btn-navbar:active, .navbar .btn-navbar.active, .navbar .btn-navbar.disabled, .navbar .btn-navbar[disabled] {
-        background-color: #2C3E50;
-    }
-    
-    
-    .nav-collapse .nav > li > a, .nav-collapse .dropdown-menu a {
+
+.nav-collapse,
+.navbar .nav > li > a {
+    border: 0;    
+}    
+    /* Links */
+    .nav-collapse .nav > li > a, 
+    .nav-collapse .dropdown-menu a {
         color: #FFFFFF !important;
-     }
-     
-     .nav-collapse .nav > li > a:hover, .nav-collapse .nav > li > a:focus, .nav-collapse .dropdown-menu a:hover, .nav-collapse .dropdown-menu a:focus {
-        background-color: #336699 !important;
-    }
-     
-    .nav-collapse .nav .nav-header {
-        color: #eee !important;
-        text-shadow: none;
-    } 
+         }     
+         .nav-collapse .nav > li > a:hover, 
+         .nav-collapse .nav > li > a:focus, 
+         .nav-collapse .dropdown-menu a:hover, 
+         .nav-collapse .dropdown-menu a:focus {
+            background-color: #336699 !important;
+            }
+
+        .nav-collapse .nav .nav-header {
+            color: #eee !important;
+            text-shadow: none;
+            } 
 }
+
 
 
 
