--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -116,7 +116,7 @@ a {
     color: #ECF0F1;
     text-shadow: none;
     padding: 18px 15px;
-    font-weight: bold;
+    font-weight: normal;
     }
 
     /* Nav Link hover */
