--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -203,7 +203,7 @@ a {
         color: #ECF0F1;
         padding-top: 10px;
         padding-bottom: 10px; 
-        font-weight: normal;   
+        font-weight: 600;   
         }
                           
         /* Dropdown link hover */
