--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -55,6 +55,10 @@ small { color: #888; }
     margin-bottom: 22px;
 }
 
+#about .btn {
+    margin: 10px 0;
+}
+
 #links h1,
 #links h3,
 #links h4 {
@@ -66,6 +70,7 @@ small { color: #888; }
 }
 #links p {
     font-size: 14px;font-size: 0.88em;
+    line-height: 1.4em;
 }
 
 hr {
