--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,7 +77,7 @@ a {
 /* Logo */
 .site-title { margin: 0; }
 .navbar .brand {
-    color: #FFFFFF;
+    color: #b4c5d7;
     text-shadow: none;
     font-size: 32px;font-size:2rem;
     }
@@ -103,7 +103,7 @@ a {
     }
     .navbar-fixed-top .navbar-inner, 
     .navbar-static-top .navbar-inner {
-        border-width: 0;
+        border-bottom: 4px solid #2c3e50 !important;
         box-shadow: none;
         }
 
@@ -446,7 +446,7 @@ footer {
     color: #999999;
     }
     footer .container {
-        border-top: 1px solid #DDDDDD;
+        border-top: 1px dashed #AAAAAA;
         padding: 14px 0 50px;
         }
 	    footer a:hover { opacity: 0.6; }
