--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,7 @@
 body {
     padding-top: 90px;
     background: #f8f2e4;
+    display: none;
 }
 
 @media (min-width:980px) {
@@ -377,7 +378,7 @@ hr {
     width: 960px;
     height: 540px;
     background: #000;
-    display: block;
+    display: none;
     position: absolute;
     top: 90px;
     z-index: -1;
