--- a/demo/bootstrap/assets/css/custom2.css
+++ b/demo/bootstrap/assets/css/custom2.css
@@ -103,7 +103,7 @@
 	}
 
     @media (min-width: 768px) and (max-width: 979px) {
-        .navbar-fixed-top { margin-bottom: 0px; )
+        .navbar-fixed-top { margin-bottom: 0px; }
     }
 
 
