--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,13 +1,18 @@
 /* IMPORT */   
 @import url("typography.css");
 
-#status {
+#preloader {
 	width:200px;
 	position:absolute;
 	left:50%; /* centers the loading animation horizontally one the screen */
 	top:50%; /* centers the loading animation vertically one the screen */
 	margin:-100px 0 0 -100px; /* is width and height divided by two */
-    border-radius: 10px !important;
+    border-radius: 20px !important;
+   
+    /* Safari Flicker Fix #2 */
+    -webkit-transform: translate3d(0, 0, 0);
+    -webkit-backface-visibility: hidden; 
+    -webkit-transform: translateZ(0);
 }
 
 
